added Router and a little bit of styling

--- a/03-tom-die-lok/public/index.html
+++ b/03-tom-die-lok/public/index.html
@@ -6,6 +6,10 @@
     <title>React App</title>
   </head>
   <body>
+    <div id="nav">
+      <a href="/"><button>Home</button></a>
+      <a href="/money"><button>Money</button></a>
+    </div>
     <div id="root"></div>
   </body>
 </html>
